# segger

./: .gitignore  README.md  pyproject.toml
src/segger/: __main__.py
src/segger/cli/: config.yaml  main.py  registry.py
src/segger/data/: __init__.py  data_module.py  tile_dataset.py  tiling.py  writer.py
src/segger/data/partition/: __init__.py  dataset.py  sampler.py
src/segger/data/utils/: __init__.py  anndata.py  heterodata.py  neighbors.py
src/segger/geometry/: __init__.py  boundaries.py  conversion.py  morphology.py  quadtree.py  query.py
src/segger/io/: __init__.py  cosmx.py  fields.py  preprocessor.py  utils.py
src/segger/metrics/: segment.py
src/segger/models/: __init__.py  _triplet_loss_dev.py  ist_encoder.py  lightning_model.py  triplet_loss.py
src/segger/validation/: contamination.py  scratch.ipynb  spurious_gene_pair_score.py
