[project]
name = "segger"
version = "0.1.0"
description = "Project"
authors = [
    { name = "Andrew Moorman", email = "moormana@mskcc.org" },
]
keywords = []
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
]

[project.optional-dependencies]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/segger"]

[project.scripts]
segger = "segger.cli.main:app"
