[project]
name = "segger"
version = "0.1.0"
description = "Segmentation of spatial transcriptomics data"
authors = [
    {name = "Elyas Heidari", email = "elyas.heidari@dkfz-heidelberg.de"},
    {name = "Andrew Moorman", email = "moormana@mskcc.org"},
]
keywords = ["spatial-transcriptomics", "segmentation", "image-analysis"]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "anndata",
    "cyclopts",
    "geopandas",
    "lightning",
    "numba",
    "numpy",
    "opencv-python",
    "pandas",
    "polars",
    "pyarrow",
    "scanpy",
    "scipy",
    "shapely",
    "scikit-image",
    "scikit-learn",
    "tifffile",
    "torch_geometric",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/segger"]

[project.scripts]
segger = "segger.cli.main:app"